media-server/calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: calibre-web
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: lscr.io/linuxserver/calibre-web:0.6.26
          ports:
            - containerPort: 8083
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
            - name: data-pv
              subPath: Books
              mountPath: /books
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: calibre-web-config
        - name: data-pv
          persistentVolumeClaim:
            claimName: media-pvc-2
