media-server/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: calibre-web
