media-server/calibre-web/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  namespace: media-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: calibre-web.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre-web
            port:
              name: http
  tls:
  - hosts:
    - calibre-web.wavecat.net
    secretName: calibre-web.wavecat.net
